--- a/src/app/health-record/health-record-create/health-record-create.html
+++ b/src/app/health-record/health-record-create/health-record-create.html
@@ -1,1 +1,5 @@
-<p>health-record-create works!</p>
+<app-health-record-form
+  [isLoading]="isLoading"
+  [initDoc]="initDoc"
+  (onSubmitEvent)="onSubmit($event)"
+></app-health-record-form>
