--- a/src/app/health-record/health-record-update/health-record-update.html
+++ b/src/app/health-record/health-record-update/health-record-update.html
@@ -1,1 +1,5 @@
-<p>health-record-update works!</p>
+<app-health-record-form
+  [isLoading]="isLoading"
+  [initDoc]="initDoc"
+  (onSubmitEvent)="onSubmit($event)">
+</app-health-record-form>
