--- a/src/app/dashboard/dashboard-admin/dashboard-admin.html
+++ b/src/app/dashboard/dashboard-admin/dashboard-admin.html
@@ -5,13 +5,17 @@
 <main class="dashboard-container">
   <!-- Statistic Cards -->
   <div class="card stat-card mat-elevation-z2">
-    <h2>Total Livestock</h2>
-    <p class="stat-number">{{ reportData.totalLivestock }}</p>
+    <div class="stat-content">
+      <h2>Total Livestock</h2>
+      <p class="stat-number">{{ reportData.totalLivestock }}</p>
+    </div>
   </div>
 
   <div class="card stat-card mat-elevation-z2">
-    <h2>Vaccination Rate</h2>
-    <p class="stat-number">{{ reportData.vaccinationRate }}%</p>
+    <div class="stat-content">
+      <h2>Vaccination Rate</h2>
+      <p class="stat-number">{{ reportData.vaccinationRate }}%</p>
+    </div>
   </div>
 
   <!-- Chart Cards -->
