--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -15,7 +15,13 @@
         <form [formGroup]="rxform" (ngSubmit)="onSubmit()" class="login-form">
           <mat-form-field appearance="outline" class="form-field">
             <mat-label>Username</mat-label>
-            <input matInput type="text" formControlName="username" required>
+            <input 
+              matInput 
+              type="text" 
+              formControlName="username" 
+              required
+              autocomplete="username"
+            >
             <mat-error *ngIf="rxform.get('username')?.invalid && rxform.get('username')?.touched">
               Username is required
             </mat-error>
@@ -23,7 +29,13 @@
 
           <mat-form-field appearance="outline" class="form-field">
             <mat-label>Password</mat-label>
-            <input matInput type="password" formControlName="password" required>
+            <input 
+              matInput 
+              type="password" 
+              formControlName="password" 
+              required
+              autocomplete="current-password"
+            >
             <mat-error *ngIf="rxform.get('password')?.invalid && rxform.get('password')?.touched">
               Password is required
             </mat-error>
