fix logout hide nav

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,6 +13,7 @@
         <a mat-list-item [routerLink]="isLoading ? null : '/treatment'">Treatment</a>
         <a mat-list-item [routerLink]="isLoading ? null : '/vaccination'">Vaccination</a>
         <a mat-list-item [routerLink]="isLoading ? null : '/schedule'">Schedule</a>
+        <a mat-list-item [routerLink]="isLoading ? null : '/user-settings'">User Settings</a>
 
         <button
           mat-raised-button
