--- a/src/app/claims/claims-create/claims-create.html
+++ b/src/app/claims/claims-create/claims-create.html
@@ -1,5 +1,5 @@
-<app-livestock-form
+<app-claims-form
   [isLoading]="isLoading"
   [initDoc]="initDoc"
   (onSubmitEvent)="onSubmit($event)">
-</app-livestock-form>
+</app-claims-form>
