--- a/src/app/livestock-group/livestock-group-list/livestock-group-list.html
+++ b/src/app/livestock-group/livestock-group-list/livestock-group-list.html
@@ -1,6 +1,6 @@
 <div class="users-container">
   <div class="users-header">
-    <h2>Livestocks</h2>
+    <h2>Livestock Groups</h2>
     <button mat-raised-button color="primary" (click)="onCreate()">
       <mat-icon>add</mat-icon> Create Livestock
     </button>
@@ -12,43 +12,26 @@
   </div>
 
   <ng-template #tableTemplate>
-    <table mat-table [dataSource]="livestocks" class="mat-elevation-z2 user-table">
+    <table mat-table [dataSource]="livestockGroups" class="mat-elevation-z2 user-table">
 
-      <!-- Tag Number -->
-      <ng-container matColumnDef="tagNumber">
-        <th mat-header-cell *matHeaderCellDef> Tag Number </th>
-        <td mat-cell *matCellDef="let livestock"> {{ livestock.tagNumber }} </td>
+      <!-- Group Name -->
+      <ng-container matColumnDef="groupName">
+        <th mat-header-cell *matHeaderCellDef> Group Name </th>
+        <td mat-cell *matCellDef="let livestockGroup"> {{ livestockGroup.groupName }} </td>
       </ng-container>
 
-      <!-- Species -->
-      <ng-container matColumnDef="species">
-        <th mat-header-cell *matHeaderCellDef> Species </th>
-        <td mat-cell *matCellDef="let livestock"> {{ livestock.species }} </td>
-      </ng-container>
-
-      <!-- Breed -->
-      <ng-container matColumnDef="breed">
-        <th mat-header-cell *matHeaderCellDef> Breed </th>
-        <td mat-cell *matCellDef="let livestock"> {{ livestock.breed }} </td>
-      </ng-container>
-
-      <!-- Sex -->
-      <ng-container matColumnDef="sex">
-        <th mat-header-cell *matHeaderCellDef> Sex </th>
-        <td mat-cell *matCellDef="let livestock"> {{ livestock.sex }} </td>
-      </ng-container>
-
-      <!-- Age -->
-      <ng-container matColumnDef="age">
-        <th mat-header-cell *matHeaderCellDef> Age </th>
-        <td mat-cell *matCellDef="let livestock"> {{ livestock.age }} </td>
+      <!-- Farmer -->
+      <ng-container matColumnDef="farmer">
+        <th mat-header-cell *matHeaderCellDef> Farmer </th>
+        <td mat-cell *matCellDef="let livestockGroup"> {{ livestockGroup.farmer.firstName }} {{ livestockGroup.farmer.lastName }} </td>
       </ng-container>
 
       <!-- Status -->
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let livestock"> {{ livestock.status }} </td>
+        <td mat-cell *matCellDef="let livestockGroup"> {{ livestockGroup.status }} </td>
       </ng-container>
+
 
       <!-- Action -->
       <ng-container matColumnDef="action">
