--- a/src/app/claims/claims-form/claims-form.html
+++ b/src/app/claims/claims-form/claims-form.html
@@ -23,16 +23,14 @@
         </div>
 
         <div class="form-row">
-           <mat-form-field appearance="outline" class="third-width">
+          <mat-form-field appearance="outline" class="half-width">
             <mat-label>Farmer</mat-label>
-            <mat-select formControlName="farmer" required>
-              <mat-option *ngFor="let f of farmers" [value]="f.id">
-                {{ f.name }}
-              </mat-option>
+            <mat-select 
+              formControlName="farmer" 
+              [disabled]="user?.role === 'farmer'">
+              <mat-option *ngFor="let f of farmers" [value]="f.id">{{ f.name }}</mat-option>
             </mat-select>
-            <mat-error *ngIf="farmer.hasError('required')">
-              Farmer is required.
-            </mat-error>
+            <mat-error *ngIf="farmer.hasError('required')">Farmer is required.</mat-error>
           </mat-form-field>
 
           <mat-form-field appearance="outline" class="third-width">
